# Panitia-Probation-1

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  guide.txt
backend/src/: account.rs  forum.rs  konsultasi.rs  main.rs
backend/src/psql/: clear_database.sql  create.sql  reset_database.sql
backend/src/utils/: mod.rs  response.rs  sql.rs  token.rs
backend/test_utils/: README.md  generator.py  i.py
frontend/: .eslintrc.json  .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: AddConsultationForm.jsx  AddFundingForm.jsx  Avatar.jsx  Button.jsx  Card.jsx  CardLogin.jsx  CardRegister.jsx  Footer.jsx  Heading.jsx  Inputfield.jsx  Label.jsx  LayoutInputLabel.jsx  Loading.jsx  Login.jsx  Modal.jsx  Navbar.jsx  Select.jsx  ShowUsers.jsx  Sidebar.jsx  SwiperCard.jsx  Toast.jsx
frontend/src/pages/: Auth.jsx  Chat.jsx  Consultation.jsx  Forum.jsx  FundingForm.jsx  Home.jsx  Payment.jsx  stylsheet.css
frontend/src/pages/Homepage/: ClassInvestorHome.jsx  ClassUserHome.jsx  Home.jsx
psql/: create.sql  reset_database.sql
