[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
tokio = { version = "1.22.0", features = ["full"]}
tokio-postgres = "0.7.7"
warp = "0.3.3"
log = { version = "0.4", features = ["release_max_level_warn"]}
simplelog = "0.12.0"
json = "0.12.4"
anyhow = "1.0.66"
thiserror = "1.0.37"
futures-util = "0.3.25"
dotenv = "0.15.0"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
serde_derive = "1.0.148"
regex = "1.7.0"
const-str = { version = "0.5.3", features = ["all"] }
async-trait = "0.1.64"
once_cell = "1.17.0"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
itertools = "0.10.5"
tokio-stream = "0.1.14"
hyper = "0.14.26"
postgres-types = { version = "0.2.5", features = ["derive"]}
